
* pcls now returns indices of active set constraints as attribute of return 
  vector.

* fix bam to always return a square QR R factor of the model matrix 
  (previously it was possible for it not to be square for a rank deficient 
  model matrix, which could cause a failure in summary). Thanks to Amy Hughes

* Fixed bam/bam.update to pick up weights correctly, rather than failing. 
  Thanks to Max Moldovan.

* Added sparse matrix Cholesky routine, mchol, a wrapper for 
  Matrix::Cholesky, giving the same functionality as Matrix::chol prior 
  to the decision for this not to return the pivot sequence. 

* 'mroot' modified so that svd option uses an efficient symmetric eigen routine 
  to compute SVD (argument is positive semi-definite after all).

* fixed gam.vcomp to avoid failure with extended families and bam. Thanks to
  Nathan LaSpina for reporting.

* modification of discrete bam prediction method function to better deal with
  extra factor levels in prediction. Slightly differs from predict.gam, in 
  setting effect to zero, rather than NA.

* fix to NCV handling of dropped NA points - previously could end up with
  different numbers of predict and drop neighbourhoods. Thanks to Nicole
  Augustin.	

* XWXd fix for row col interchange bug introduced with long vector support in 
  1.9-1.

* fix of gumbls initializtion code bug. Initial parameters were so bad that 
  fit could fail. 

* zoom in bfgs modified so that start values always the same to avoid
  occasional step failures from repeatedly changing initial values.

* gevlss improved xi initialization.

* gam(...,discrete=TRUE) no longer ignores starting coefficient values (thanks
  to Matteo Fasiolo).

* Sl.setup and ldetS changes to return totla penalty matrices directly 
  (avoiding a redundant crossproduct)

* Fix to Pearson residuals in gammals family - thanks to gavin Simpson and 
  Arthur Fendrich

* ldetS slight efficiency improvement by direct matrix diagonal modification 